--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 bags: 3
 song: Joke Brown
 spring:
+  profiles:
+    active: test
+---
+spring:
+  profiles: test
   jpa:
     show_sql: false
     database: H2
@@ -8,3 +13,4 @@ spring:
     url: jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
     initialize: false
 instruments:
+---
